@@ -42,7 +42,8 @@ public class UsuarioController {
     public String logingUsusario(UsuarioDTO usuario) throws UsuarioException {
         usuario = this.usuarioService.login(usuario);
         Long id = usuario.getId();
-        return "redirect:/reserva/lista/%s".formatted(id);
+        return String.format("redirect:/reserva/lista/%s", id);
+
     }
 
     @GetMapping("/registro")
@@ -56,7 +57,7 @@ public class UsuarioController {
     public String crearUsuario(UsuarioDTO usuario) throws UsuarioException {
         UsuarioDTO nuevoUsuario = this.usuarioService.crearUsuario(usuario);
         Long id = nuevoUsuario.getId();
-        return "redirect:/usuario/%s".formatted(id);
+        return "redirect:/reserva/lista/%s".formatted(id);
     }
 
 
